@@ -14,6 +14,9 @@ Changes since 2.1.0
    undefined variable is made, that variable will be automatically
    created and given static scope.
 8. slsh/lib/autoload.sl: readascii added.
+9. src/slrline.c: The redraw function was ignoring the application
+   installed update hook, disrupting the display when a redraw was
+   requested.
 
 Changes since 2.0.7
 1. src/slrline.c: SLrline_bol/eol functions were missing from the
